--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
                 <h1 id="top">Password Generator</h1>
                 <p>A handy tool for an easy-to-remember password</p>
             </div>
-            
+            <script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1O4qfIGRy8ae9ZREJPy3NHHK"
+  publishable-key="pk_test_51O2JC2GRy8ae9ZREuEw8OjZhqszEU7rt3N1XcCTDFi6HE1omGqijtyF1OgHtD3obL7kBDnIqUV5Bl2NAfmSUlGar001Cc0bPyx"
+>
+</stripe-buy-button>
             <p>
                 <!-- an input to display the password in -->
                 <div id = "passworddisplay">
