--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
             <div id = "banner">
                 <h1 id="top">Password Generator</h1>
                 <p>A handy tool for an easy-to-remember password</p>
+		    <script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1O4qyBGRy8ae9ZREM7vAZT6L"
+  publishable-key="pk_test_51O2JC2GRy8ae9ZREuEw8OjZhqszEU7rt3N1XcCTDFi6HE1omGqijtyF1OgHtD3obL7kBDnIqUV5Bl2NAfmSUlGar001Cc0bPyx"
+>
+</stripe-buy-button>
+		    <script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1O4qysGRy8ae9ZREQYFMtvCU"
+  publishable-key="pk_test_51O2JC2GRy8ae9ZREuEw8OjZhqszEU7rt3N1XcCTDFi6HE1omGqijtyF1OgHtD3obL7kBDnIqUV5Bl2NAfmSUlGar001Cc0bPyx"
+>
+</stripe-buy-button>
             </div>
            
             </p>
