--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
             </p>
 
             <div id = "passwordbutton">
-		
+		<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1O4qysGRy8ae9ZREQYFMtvCU"
+  publishable-key="pk_test_51O2JC2GRy8ae9ZREuEw8OjZhqszEU7rt3N1XcCTDFi6HE1omGqijtyF1OgHtD3obL7kBDnIqUV5Bl2NAfmSUlGar001Cc0bPyx"
+>
+</stripe-buy-button>
                 <!-- a button to generate the password -->
                 <button id = "generatePasswordButton">Generate Password</button>
             </div>
