--- a/index.html
+++ b/index.html
@@ -60,10 +60,18 @@
 >
 </stripe-buy-button>
 	    </div>
+	    <div style="text-align: center">
+ 
+ 
+        <video width="500px" height="500px" controls="controls">
+        <source src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
+       </video>
+    </div>
 
         <!-- connect javascript here -->
         <script src="function.js"></script>
     </body>
+	
 </html>
 
 
