--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
  
  
         <video width="500px" height="500px" controls="controls">
+	<video controls autoplay>
         <source src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
        </video>
     </div>
