--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 	    <div style="text-align: center">
  
  
-        <video width="500px" height="500px" controls="controls">
-	<video controls autoplay>
+        <video width="500px" height="500px" controls autoplay>
         <source src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
        </video>
     </div>
