--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	    <div style="text-align: center">
  
  
-        <video width="500" height="500" controls autoplay muted>
+        <video width="500" height="500" align="right" controls autoplay muted>
         <source src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
        </video>
     </div>
