--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 >
 </stripe-buy-button>
 	    </div>
-	    <div style="text-align: right">
+	    <div style="float: right">
  
  
         <video width="500" height="500" align="right" controls autoplay muted>
