--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 </stripe-buy-button>
 	    </div>
 	    <div style="float: right">
+ 		.img_deg{
+		    float: right;
+		    }
  
- 
-        <video width="500" height="500" align="right" controls autoplay muted>
-        <source src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
+        <video width="500" height="500" controls autoplay muted>
+        <source class = img_deg src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
        </video>
     </div>
 
