--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  		
  
       			<video width="500" height="500" controls autoplay muted>
-      			<source class =  src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
+      			<source src="Burger King Whopper Song Ad Lyrics.mp4" type="video/mp4" />
       			</video>
    		 </div>
 
