--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
             	    <input type="checkbox" id="capitalLetter">
 		</div>
 
-		<div id = "numberofnumbers">
+		<div id = "numberofnumbers"style = "text-align:center">
                     <label for="numnumbers">Number of Numbers:</label>
                     <input id="numnumbers">
                 </div>
                 
-                <div id = "numSpecialChars">
+                <div id = "numSpecialChars"style = "text-align:center">
                     <label for="specialCharsInput">Number of Special Characters:</label>
                     <input id="specialCharsInput">
                 </div>
 		
                 <!-- an input to display the password in -->
-                <div id = "passworddisplay">
+                <div id = "passworddisplay"style = "text-align:center">
                     <label for="passwordinput">Your New Password:</label>
                     <input id="passwordinput">
                 </div>
                 
             </p>
 
-            <div id = "passwordbutton">
+            <div id = "passwordbutton"style = "text-align:center">
                 <!-- a button to generate the password -->
                 <button id = "generatePasswordButton">Generate Password</button>
             </div>
