--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	    
 		<!-- an input to take the number of special characters the user wants -->
-		<div id = "capitalLetterCheckBox" style = "text-align:center">
+		<div id = "capitalLetterCheckBox" style = "float:center">
 		    <label for="capitalLetter">Start with Capital Letter?</label>
             	    <input type="checkbox" id="capitalLetter">
 		</div>
